shibuya.jpg로 수정

--- a/Shibuya.html
+++ b/Shibuya.html
@@ -18,6 +18,6 @@
 
     As of April 1, 2022, Shibuya Ward has an estimated population of 228,906[citation needed] and a population density of 15,149.30 people per km2 (39,263.4/sq mi). The total area is 15.11 km2 (5.83 sq mi).</p>
 
-    <img src="./images/Shibuya">
+    <img src="./images/Shibuya.jpg">
 </body>
 </html>
